--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "description": "",
   "version": "1.0.0",
   "watch": {
-    "test": "main.wat"
+    "WASM": "main.wat"
   },
   "scripts": {
-    "build": "npx -p wabt wat2wasm main.wat -o out/main.wasm && npx -p wabt wat2wasm main.wat -o out/main.html && npx -p wabt wat2wasm main.wat -o out/main.zip && npx -p wabt wat2wasm main.wat -o out/main.gba",
+    "build": "npx -p wabt wat2wasm main.wat -o out/main.wasm && npx -p wabt wat2wasm main.wat -o out/main.html && npx -p wabt wat2wasm main.wat -o out/main.7z && npx -p wabt wat2wasm main.wat -o out/main.gba",
     "validate": "npx -p wabt wasm-validate out/main.wasm -v",
     "execute": "node helpers/runwasm.js",
-    "watch": "npm-watch test",
-    "test": "npm run build && npm run validate && npm run execute"
+    "wabt-execute": "npx -p wabt wasm-interp out/main.wasm",
+    "wasm2wat": "npx -p wabt wasm2wat out/main.wasm -o out/main.wat",
+    "dissassemble": "npx -p wabt wat2wasm main.wat -v",
+    "watch": "npm-watch WASM",
+    "WASM": "npm run build && npm run validate && npm run execute"
   },
   "resolutions": {
     "graceful-fs": "^4.2.4"
@@ -20,11 +23,6 @@
     "gulp": "~3.9.1",
     "ts-node": "~5.0.0",
     "typescript": "~2.7.2"
-  },
-  "wasmStudio": {
-    "name": "Hello World in C",
-    "description": "# Hello World in C\n\nPrint \\`Hello World\\` using a minimal POSIX API.\nLevel: *Advanced*\nTopics: Low-Level, Memory, Linux, System Calls",
-    "icon": "c-lang-file-icon"
   },
   "dependencies": {
     "npm-watch": "^0.10.0",
